[gd_scene load_steps=4 format=3 uid="uid://co7kucn2sklks"]

[ext_resource type="Script" path="res://Units/Temp_Card/temp_card.gd" id="1_ot6uk"]
[ext_resource type="Texture2D" uid="uid://dyx8lchxniwuv" path="res://Assets/Card_-_Test.png" id="1_vkmkb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_skkqy"]
size = Vector2(95, 143)

[node name="TempCard" type="Node2D"]
script = ExtResource("1_ot6uk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_vkmkb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_skkqy")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
